3x3の大枠、枠ごとにレイヤーを重ねられるように、枠の位置指定、読み込み完成（機能はまだ足りない）

--- a/LayerProto.vcxproj
+++ b/LayerProto.vcxproj
@@ -133,11 +133,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Frame.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="Layer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="StageCSVManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Frame.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="Layer.h" />
+    <ClInclude Include="StageCSVManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
