--- a/LayerProto.vcxproj
+++ b/LayerProto.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Select.cpp" />
     <ClCompile Include="StageCSVManager.cpp" />
+    <ClCompile Include="Util.cpp" />
     <ClCompile Include="Vector2.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -155,6 +156,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Select.h" />
     <ClInclude Include="StageCSVManager.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
